# template-docker

./: .bumpversion.toml  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  db.sqlite  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint-and-test.yml  pull-request.yaml  push.yaml
app/: main.py
docker/: Dockerfile  gunicorn_conf.py
src/: .dockerignore  Dockerfile  db.sqlite  entrypoint.sh  requirements.txt
src/app/: config.py  dummyroutes.py  main.py  models.py  routes.py
src/app/core/: logging.py  settings.py
src/app/db/: engines.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 20220506_062312-02733130c0d1_.py  20220506_062505-00a197b35402_.py
src/app/db/schemas/: all.py  base.py  users.py
src/app/models/: tortoise.py  users.py
src/app/routes/: dummy.py  users.py
src/tests/: conftest.py  strategies.py  test_main.py
src/tests/core/: test_logging.py  test_settings.py
tests/: conftest.py  test_main.py
