#### poetry ###################################################################
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Minimal Poetry example with Docker Multi-Stage builds"
authors = ["Derek Wan <d.wan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.2"
gunicorn = "^20.0.4"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
coverage = "^6.3.2"
isort = "^5.10.1"
poetry-deps-scanner = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
requests = "^2.23.0"

#### black ####################################################################
[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ['py310']

#### isort ####################################################################
[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
virtual_env = ".venv/bin/python"

[tool.coverage]

# https://github.com/nedbat/coveragepy
[tool.coverage.run]
source = ["app"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = ["# noqa", "raise NotImplementedError"]
